# Neural

./: .gitignore  AUDIT_REPORT.md  Bio-Digital-Blueprint.MD  CHANGELOG.md  CONTRIBUTING.md  Final_NRL_Architecture_GGUF.MD  LICENSE  NOTICE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v3.0.md  SECURITY.md  bench_wps_phi3.txt  build.ps1  build.sh  grok_review_handoff.md  nrl-architecture.md  nrl-new-archietcture.MD  nrl_chat_runner.py  rescue_audit.txt  rescue_audit_phi3.txt
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
LICENSES/: NOTICE
benchmarks/: README.md  gguf_golden.py  initial_results.md  nrl_vs_cpp.py  wps_autopilot.py  wps_chat_bench.py
docs/: CL4_ZPM_MATH.md  FINAL_PRODUCT.md  FUTURE_PHASES.md  GETTING_STARTED.md  PRIOR_ART.md  PRODUCTION_READINESS.md  README.md  nrl_alive_language_evolution_architecture.md  nrl_gguf_runner_architecture.md  nrl_immune_system_spec.md
engine/: README.md
examples/: README.md  aes256.nrl  aes256_locked.nrl  bdb_chat.py  prime.py  (+37 more)
nrlpy/: README.md  pyproject.toml
nrlpy/src/_core/: module.c
nrlpy/src/nrlpy/: __init__.py  __main__.py  _core.pyi  adaptive_chat.py  chat.py  chat_prewarm.py  cli.py  compat.py  consent_ai.py  drift_conqueror.py  evidence.py  final_wps.py  gates.py  gguf.py  gguf_chat.py  ladder.py  learn_daemon.py  learn_store.py  lmo.py  lmo_disk_manager.py  native.py  native_ladder.py  nrl_ai.py  nrl_ai_bench.py  nrl_ai_chat.py  nrl_ai_compose.py  nrl_ai_ingest.py  nrl_ai_resolve.py  paths.py  plasticity.py  py.typed  runtime.py  seamless.py  shadow.py  shell.py  throughput_math.py  workload.py  wps_chat_bench_cli.py  wps_gate.py  zpm.py  (+1 more)
nrlpy/src/nrlpy/data/: seed_corpus.txt
nrlpy/tests/: conftest.py  test_bio_digital_brain_e2e.py  test_chat.py  test_chat_prewarm.py  test_cli_chat.py  test_cli_control.py  test_cli_evidence.py  test_consent_ai.py  test_control_hints.py  test_drift_conqueror.py  test_evidence.py  test_final_wps_gate.py  test_gates.py  test_gguf.py  test_gguf_chat.py  test_ladder_r2_active.py  test_ladder_r2_shadow.py  test_learn_daemon.py  test_learn_store.py  test_lmo.py  test_lmo_disk_manager.py  test_native_full_path.py  test_native_ladder.py  test_nrl_ai.py  test_nrl_ai_bench.py  test_nrl_ai_chat.py  test_nrl_ai_compose.py  test_nrl_ai_demo.py  test_nrl_ai_ingest.py  test_nrl_ai_resolve.py  test_paths.py  test_plasticity.py  test_r2_ngram_rescue.py  test_rewired_chat.py  test_seamless.py  test_shadow.py  test_smoke.py  test_sovereign_rd_mix.py  test_throughput_math.py  test_workload.py  (+5 more)
(+58 files in other folders)
