# Copyright (c) 2026 Daniel Harding - RomanAILabs. All Rights Reserved.
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrlpy"
version = "1.0.0"
description = "Python front-end for the NRL machine-code engine (Final Product)."
authors = [{ name = "Daniel Harding", email = "daniel@romanailabs.com" }]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "RomanAILabs Proprietary Source-Available Evaluation License 1.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
chat = ["psutil>=5.9"]
lightning = ["websockets>=12"]

[project.scripts]
nrlpy = "nrlpy.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["nrlpy"]
include-package-data = true

[tool.setuptools.package-data]
nrlpy = ["py.typed", "_core.pyi", "*.pyd", "*.so", "data/*.txt"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "S", "RUF"]
ignore = ["S101"]

[tool.mypy]
strict = true
python_version = "3.9"
packages = ["nrlpy"]
mypy_path = "src"
